// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots tests should display correctly 1`] = `
<div>
  <div
    aria-haspopup="listbox"
    aria-owns="downshift-3-menu"
    class="component container"
    role="combobox"
    tabindex="-1"
  >
    <button
      aria-controls="downshift-3-menu"
      aria-labelledby="downshift-3-label"
      class="component primary m m component primary component primary block withRightAddons customButton border white darkening"
      id="downshift-2-input"
      selectedmultiple=""
      style="background: rgb(255, 69, 195);"
      tabindex="0"
      type="button"
    >
      <span
        class="text"
      >
        <span
          for="downshift-2-input"
          id="downshift-3-label"
        >
          some label
        </span>
      </span>
      <span
        class="addons"
      >
        <span
          class="iconContainer"
        >
          <svg
            data-test-id="custom-picker-button-icon"
            fill="currentColor"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Snapshots tests should display correctly 2`] = `
<div>
  <div
    aria-haspopup="listbox"
    aria-owns="downshift-19-menu"
    class="component container"
    role="combobox"
    tabindex="-1"
  >
    <button
      aria-controls="downshift-19-menu"
      aria-labelledby="downshift-19-label"
      class="component primary m m component primary component primary block withRightAddons customButton border white darkening"
      id="downshift-18-input"
      selectedmultiple=""
      style="background: rgb(255, 69, 195);"
      tabindex="0"
      type="button"
    >
      <span
        class="text"
      >
        <span
          for="downshift-18-input"
          id="downshift-19-label"
        >
          some label
        </span>
      </span>
      <span
        class="addons"
      >
        <span
          class="iconContainer"
        >
          <svg
            data-test-id="custom-picker-button-icon"
            fill="currentColor"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Snapshots tests should display correctly 3`] = `
<div>
  <div
    aria-haspopup="listbox"
    aria-owns="downshift-31-menu"
    class="component"
    role="combobox"
    tabindex="-1"
  >
    <button
      aria-controls="downshift-31-menu"
      aria-labelledby="downshift-31-label"
      arrow="[object Object]"
      class="component primary m m component primary component primary block withRightAddons customButton border white darkening"
      id="downshift-30-input"
      selectedmultiple=""
      style="background: rgb(255, 69, 195);"
      tabindex="0"
      type="button"
    >
      <span
        class="text"
      >
        <span
          for="downshift-30-input"
          id="downshift-31-label"
        >
          some label
        </span>
      </span>
      <span
        class="addons"
      >
        <span
          class="iconContainer"
        >
          <svg
            data-test-id="custom-picker-button-icon"
            fill="currentColor"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Snapshots tests should display opened correctly 1`] = `
<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="downshift-15-menu"
    class="component container"
    role="combobox"
    tabindex="-1"
  >
    <button
      aria-controls="downshift-15-menu"
      aria-labelledby="downshift-15-label"
      class="component primary m m component primary component primary block iconOnly customButton border white darkening"
      id="downshift-14-input"
      selectedmultiple=""
      style="background: rgb(255, 69, 195);"
      tabindex="0"
      type="button"
    >
      <span
        class="addons"
      >
        <span
          class="iconContainer open"
        >
          <svg
            data-test-id="custom-picker-button-icon"
            fill="currentColor"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Snapshots tests should display opened correctly 2`] = `
<div
  alfa-portal-container=""
>
  <div
    class="component"
    data-popper-escaped="true"
    data-popper-placement="bottom-start"
    data-popper-reference-hidden="true"
    style="z-index: 50; position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="inner popoverInner cc-picker-button optionsPopover"
    >
      <div
        class=""
      >
        <div
          aria-labelledby="downshift-15-label"
          class="optionsList"
          id="downshift-15-menu"
          role="listbox"
          style="min-width: 0px;"
        >
          <div
            class="optionsList m"
          >
            <div
              class="scrollable"
              style="height: 0px;"
            >
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-15-item-0"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Neptunium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-15-item-1"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Plutonium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-15-item-2"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Americium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-15-item-3"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Curium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-15-item-4"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Berkelium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-15-item-5"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Californium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-15-item-6"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Einsteinium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-15-item-7"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Fermium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-15-item-8"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Mendelevium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-15-item-9"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Nobelium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-15-item-10"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Lawrencium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-15-item-11"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Rutherfordium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-15-item-12"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Dubnium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-15-item-13"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Seaborgium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-15-item-14"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Bohrium
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="optionsListBorder"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshots tests should display opened correctly 3`] = `
<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="downshift-27-menu"
    class="component container"
    role="combobox"
    tabindex="-1"
  >
    <button
      aria-controls="downshift-27-menu"
      aria-labelledby="downshift-27-label"
      class="component primary m m component primary component primary block iconOnly customButton border white darkening"
      id="downshift-26-input"
      selectedmultiple=""
      style="background: rgb(255, 69, 195);"
      tabindex="0"
      type="button"
    >
      <span
        class="addons"
      >
        <span
          class="iconContainer open"
        >
          <svg
            data-test-id="custom-picker-button-icon"
            fill="currentColor"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Snapshots tests should display opened correctly 4`] = `
<div
  alfa-portal-container=""
>
  <div
    class="component"
    data-popper-escaped="true"
    data-popper-placement="bottom-start"
    data-popper-reference-hidden="true"
    style="z-index: 50; position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="inner popoverInner cc-picker-button optionsPopover"
    >
      <div
        class=""
      >
        <div
          aria-labelledby="downshift-27-label"
          class="optionsList"
          id="downshift-27-menu"
          role="listbox"
          style="min-width: 0px;"
        >
          <div
            class="optionsList m"
          >
            <div
              class="scrollable"
              style="height: 0px;"
            >
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-27-item-0"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Neptunium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-27-item-1"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Plutonium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-27-item-2"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Americium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-27-item-3"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Curium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-27-item-4"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Berkelium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-27-item-5"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Californium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-27-item-6"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Einsteinium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-27-item-7"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Fermium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-27-item-8"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Mendelevium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-27-item-9"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Nobelium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-27-item-10"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Lawrencium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-27-item-11"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Rutherfordium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-27-item-12"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Dubnium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-27-item-13"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Seaborgium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-27-item-14"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Bohrium
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="optionsListBorder"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshots tests should display opened correctly 5`] = `
<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="downshift-39-menu"
    class="component container"
    role="combobox"
    tabindex="-1"
  >
    <button
      aria-controls="downshift-39-menu"
      aria-labelledby="downshift-39-label"
      class="component primary m m component primary component primary block iconOnly customButton border white darkening"
      id="downshift-38-input"
      selectedmultiple=""
      style="background: rgb(255, 69, 195);"
      tabindex="0"
      type="button"
    >
      <span
        class="addons"
      >
        <span
          class="iconContainer open"
        >
          <svg
            data-test-id="custom-picker-button-icon"
            fill="currentColor"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Snapshots tests should display opened correctly 6`] = `
<div
  alfa-portal-container=""
>
  <div
    class="component"
    data-popper-escaped="true"
    data-popper-placement="bottom-start"
    data-popper-reference-hidden="true"
    style="z-index: 50; position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="inner popoverInner cc-picker-button optionsPopover"
    >
      <div
        class=""
      >
        <div
          aria-labelledby="downshift-39-label"
          class="optionsList"
          id="downshift-39-menu"
          role="listbox"
          style="min-width: 0px;"
        >
          <div
            class="optionsList m"
          >
            <div
              class="scrollable"
              style="height: 0px;"
            >
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-39-item-0"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Neptunium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-39-item-1"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Plutonium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-39-item-2"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Americium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-39-item-3"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Curium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-39-item-4"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Berkelium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-39-item-5"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Californium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-39-item-6"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Einsteinium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-39-item-7"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Fermium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-39-item-8"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Mendelevium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-39-item-9"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Nobelium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-39-item-10"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Lawrencium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-39-item-11"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Rutherfordium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-39-item-12"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Dubnium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-39-item-13"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Seaborgium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-selected="false"
                class="option m option"
                id="downshift-39-item-14"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Bohrium
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="optionsListBorder"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshots tests should render black color content 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      alfa-portal-container=""
    />
    <div>
      <div
        aria-haspopup="listbox"
        aria-owns="downshift-11-menu"
        class="component container"
        role="combobox"
        tabindex="-1"
      >
        <button
          aria-controls="downshift-11-menu"
          aria-labelledby="downshift-11-label"
          class="component primary m m component primary component primary block withRightAddons customButton border black darkening"
          id="downshift-10-input"
          selectedmultiple=""
          style="background: rgb(255, 69, 195);"
          tabindex="0"
          type="button"
        >
          <span
            class="text"
          >
            <span
              for="downshift-10-input"
              id="downshift-11-label"
            >
              some label
            </span>
          </span>
          <span
            class="addons"
          >
            <span
              class="iconContainer"
            >
              <svg
                data-test-id="custom-picker-button-icon"
                fill="currentColor"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-haspopup="listbox"
      aria-owns="downshift-11-menu"
      class="component container"
      role="combobox"
      tabindex="-1"
    >
      <button
        aria-controls="downshift-11-menu"
        aria-labelledby="downshift-11-label"
        class="component primary m m component primary component primary block withRightAddons customButton border black darkening"
        id="downshift-10-input"
        selectedmultiple=""
        style="background: rgb(255, 69, 195);"
        tabindex="0"
        type="button"
      >
        <span
          class="text"
        >
          <span
            for="downshift-10-input"
            id="downshift-11-label"
          >
            some label
          </span>
        </span>
        <span
          class="addons"
        >
          <span
            class="iconContainer"
          >
            <svg
              data-test-id="custom-picker-button-icon"
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshots tests should render black color content 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      alfa-portal-container=""
    />
    <div>
      <div
        aria-haspopup="listbox"
        aria-owns="downshift-23-menu"
        class="component container"
        role="combobox"
        tabindex="-1"
      >
        <button
          aria-controls="downshift-23-menu"
          aria-labelledby="downshift-23-label"
          class="component primary m m component primary component primary block withRightAddons customButton border black darkening"
          id="downshift-22-input"
          selectedmultiple=""
          style="background: rgb(255, 69, 195);"
          tabindex="0"
          type="button"
        >
          <span
            class="text"
          >
            <span
              for="downshift-22-input"
              id="downshift-23-label"
            >
              some label
            </span>
          </span>
          <span
            class="addons"
          >
            <span
              class="iconContainer"
            >
              <svg
                data-test-id="custom-picker-button-icon"
                fill="currentColor"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-haspopup="listbox"
      aria-owns="downshift-23-menu"
      class="component container"
      role="combobox"
      tabindex="-1"
    >
      <button
        aria-controls="downshift-23-menu"
        aria-labelledby="downshift-23-label"
        class="component primary m m component primary component primary block withRightAddons customButton border black darkening"
        id="downshift-22-input"
        selectedmultiple=""
        style="background: rgb(255, 69, 195);"
        tabindex="0"
        type="button"
      >
        <span
          class="text"
        >
          <span
            for="downshift-22-input"
            id="downshift-23-label"
          >
            some label
          </span>
        </span>
        <span
          class="addons"
        >
          <span
            class="iconContainer"
          >
            <svg
              data-test-id="custom-picker-button-icon"
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshots tests should render black color content 3`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      alfa-portal-container=""
    />
    <div>
      <div
        aria-haspopup="listbox"
        aria-owns="downshift-35-menu"
        class="component"
        role="combobox"
        tabindex="-1"
      >
        <button
          aria-controls="downshift-35-menu"
          aria-labelledby="downshift-35-label"
          arrow="[object Object]"
          class="component primary m m component primary component primary block withRightAddons customButton border black darkening"
          id="downshift-34-input"
          selectedmultiple=""
          style="background: rgb(255, 69, 195);"
          tabindex="0"
          type="button"
        >
          <span
            class="text"
          >
            <span
              for="downshift-34-input"
              id="downshift-35-label"
            >
              some label
            </span>
          </span>
          <span
            class="addons"
          >
            <span
              class="iconContainer"
            >
              <svg
                data-test-id="custom-picker-button-icon"
                fill="currentColor"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-haspopup="listbox"
      aria-owns="downshift-35-menu"
      class="component"
      role="combobox"
      tabindex="-1"
    >
      <button
        aria-controls="downshift-35-menu"
        aria-labelledby="downshift-35-label"
        arrow="[object Object]"
        class="component primary m m component primary component primary block withRightAddons customButton border black darkening"
        id="downshift-34-input"
        selectedmultiple=""
        style="background: rgb(255, 69, 195);"
        tabindex="0"
        type="button"
      >
        <span
          class="text"
        >
          <span
            for="downshift-34-input"
            id="downshift-35-label"
          >
            some label
          </span>
        </span>
        <span
          class="addons"
        >
          <span
            class="iconContainer"
          >
            <svg
              data-test-id="custom-picker-button-icon"
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshots tests should render custom background color 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      alfa-portal-container=""
    />
    <div>
      <div
        aria-haspopup="listbox"
        aria-owns="downshift-7-menu"
        class="component container"
        role="combobox"
        tabindex="-1"
      >
        <button
          aria-controls="downshift-7-menu"
          aria-labelledby="downshift-7-label"
          class="component primary m m component primary component primary block withRightAddons customButton border white darkening"
          id="downshift-6-input"
          selectedmultiple=""
          style="background: rgb(0, 255, 0);"
          tabindex="0"
          type="button"
        >
          <span
            class="text"
          >
            <span
              for="downshift-6-input"
              id="downshift-7-label"
            >
              some label
            </span>
          </span>
          <span
            class="addons"
          >
            <span
              class="iconContainer"
            >
              <svg
                data-test-id="custom-picker-button-icon"
                fill="currentColor"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-haspopup="listbox"
      aria-owns="downshift-7-menu"
      class="component container"
      role="combobox"
      tabindex="-1"
    >
      <button
        aria-controls="downshift-7-menu"
        aria-labelledby="downshift-7-label"
        class="component primary m m component primary component primary block withRightAddons customButton border white darkening"
        id="downshift-6-input"
        selectedmultiple=""
        style="background: rgb(0, 255, 0);"
        tabindex="0"
        type="button"
      >
        <span
          class="text"
        >
          <span
            for="downshift-6-input"
            id="downshift-7-label"
          >
            some label
          </span>
        </span>
        <span
          class="addons"
        >
          <span
            class="iconContainer"
          >
            <svg
              data-test-id="custom-picker-button-icon"
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshots tests should render custom background color 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      alfa-portal-container=""
    />
    <div>
      <div
        aria-haspopup="listbox"
        aria-owns="downshift-21-menu"
        class="component container"
        role="combobox"
        tabindex="-1"
      >
        <button
          aria-controls="downshift-21-menu"
          aria-labelledby="downshift-21-label"
          class="component primary m m component primary component primary block withRightAddons customButton border white darkening"
          id="downshift-20-input"
          selectedmultiple=""
          style="background: rgb(0, 255, 0);"
          tabindex="0"
          type="button"
        >
          <span
            class="text"
          >
            <span
              for="downshift-20-input"
              id="downshift-21-label"
            >
              some label
            </span>
          </span>
          <span
            class="addons"
          >
            <span
              class="iconContainer"
            >
              <svg
                data-test-id="custom-picker-button-icon"
                fill="currentColor"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-haspopup="listbox"
      aria-owns="downshift-21-menu"
      class="component container"
      role="combobox"
      tabindex="-1"
    >
      <button
        aria-controls="downshift-21-menu"
        aria-labelledby="downshift-21-label"
        class="component primary m m component primary component primary block withRightAddons customButton border white darkening"
        id="downshift-20-input"
        selectedmultiple=""
        style="background: rgb(0, 255, 0);"
        tabindex="0"
        type="button"
      >
        <span
          class="text"
        >
          <span
            for="downshift-20-input"
            id="downshift-21-label"
          >
            some label
          </span>
        </span>
        <span
          class="addons"
        >
          <span
            class="iconContainer"
          >
            <svg
              data-test-id="custom-picker-button-icon"
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshots tests should render custom background color 3`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      alfa-portal-container=""
    />
    <div>
      <div
        aria-haspopup="listbox"
        aria-owns="downshift-33-menu"
        class="component"
        role="combobox"
        tabindex="-1"
      >
        <button
          aria-controls="downshift-33-menu"
          aria-labelledby="downshift-33-label"
          arrow="[object Object]"
          class="component primary m m component primary component primary block withRightAddons customButton border white darkening"
          id="downshift-32-input"
          selectedmultiple=""
          style="background: rgb(0, 255, 0);"
          tabindex="0"
          type="button"
        >
          <span
            class="text"
          >
            <span
              for="downshift-32-input"
              id="downshift-33-label"
            >
              some label
            </span>
          </span>
          <span
            class="addons"
          >
            <span
              class="iconContainer"
            >
              <svg
                data-test-id="custom-picker-button-icon"
                fill="currentColor"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-haspopup="listbox"
      aria-owns="downshift-33-menu"
      class="component"
      role="combobox"
      tabindex="-1"
    >
      <button
        aria-controls="downshift-33-menu"
        aria-labelledby="downshift-33-label"
        arrow="[object Object]"
        class="component primary m m component primary component primary block withRightAddons customButton border white darkening"
        id="downshift-32-input"
        selectedmultiple=""
        style="background: rgb(0, 255, 0);"
        tabindex="0"
        type="button"
      >
        <span
          class="text"
        >
          <span
            for="downshift-32-input"
            id="downshift-33-label"
          >
            some label
          </span>
        </span>
        <span
          class="addons"
        >
          <span
            class="iconContainer"
          >
            <svg
              data-test-id="custom-picker-button-icon"
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
